--- a/numpy/runoob-numpy-learn.ipynb
+++ b/numpy/runoob-numpy-learn.ipynb
@@ -931,10 +931,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]]\n",
+      "0,1,2,3,4,5,\n",
+      "\n",
+      "[[0 3]\n",
+      " [1 4]\n",
+      " [2 5]]\n",
+      "0,1,2,3,4,5,\n",
+      "\n",
+      "0,3,1,4,2,5,\n",
+      "\n",
+      "0,3,1,4,2,5,\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NumPy 迭代器对象 numpy.nditer 提供了一种灵活访问一个或者多个数组元素的方式。\n",
+    "# 迭代器最基本的任务的可以完成对数组元素的访问。\n",
+    "# 接下来我们使用 arange() 函数创建一个 2X3 数组，并使用 nditer 对它进行迭代。\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(6).reshape(2,3)\n",
+    "print(a)\n",
+    "\n",
+    "for item in np.nditer(a):\n",
+    "    print(item, end = \",\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(a.T)\n",
+    "\n",
+    "for item in np.nditer(a.T):\n",
+    "    print(item, end = \",\")\n",
+    "print(\"\\n\")\n",
+    "    \n",
+    "\n",
+    "for item in np.nditer(a, order = \"F\"):\n",
+    "    print(item, end = \",\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "for item in np.nditer(a.T, order = \"C\"):\n",
+    "    print(item, end = \",\")\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -946,7 +1002,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -957,5 +1013,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
